# stacks-crew

./: pyproject.toml
stacks_crew2/: crew.py  main.py
stacks_crew2/config/: agents.yaml  tasks.yaml
stacks_crew2/tools/: wallet.py
tests/: test_basic.py
