[tool.poetry]
name = "stacks_crew2"
version = "0.1.0"
description = ""
authors = ["Mike Cohen <mjoecohen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.8"}
langchain = "^0.1.20"

[tool.poetry.scripts]
stacks_crew = "stacks_crew2.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
